tests/undefined/out.txt
error: undefined value identifier: x
  ┌─ err.sml:1:9
  │
1 │ val _ = x
  │         ^

typechecking failed
